# mlflow-cpp

./: README.md  README.rst  generate-protos.sh
docker-mlflow/: Dockerfile
examples/cpp_samples/: quickstart.cpp
examples/quickstart/: mlflow_tracking.py
mlflow/: __init__.py  experiments.py
mlflow-api/: cmds~  create_exp.sh  exp_deploy.sh  exp_run_package.sh  exp_serve.sh  exps_ui_launch.sh  exps_ui_local.sh  exps_ui_server.sh  mlflow_api.py
mlflow/cpp/: CMakeLists.txt  README.txt
mlflow/cpp/client/src/main/cpp/org/mlflow/api/proto/: databricks.pb.cc  databricks.pb.h  service.pb.cc  service.pb.h
mlflow/cpp/client/src/main/cpp/org/mlflow/api/proto/scalapb/: scalapb.pb.cc  scalapb.pb.h
mlflow/cpp/client/src/main/cpp/org/mlflow/tracking/: MlflowClient.cpp  MlflowClient.h  MlflowHttpCaller.cpp  MlflowHttpCaller.h  MlflowProtobufMapper.cpp  MlflowProtobufMapper.h
mlflow/cpp/client/src/main/cpp/org/mlflow/tracking/creds/: BasicMlflowHostCreds.h  MlflowHostCreds.h  MlflowHostCredsProvider.h
mlflow/cpp/test/: mlflow_ex.cpp
mlflow/java/client/src/main/java/org/mlflow/api/proto/: Service.java
mlflow/protos/: service.proto  service_pb2.py
mlflow/server/: handlers.py
mlflow/server/js/: package-lock.json  package.json
mlflow/store/: file_store.py
mlflow/tracking/: client.py
mlruns/0/: meta.yaml
mlruns/1/: meta.yaml
mlruns/1/770cf62b63684adfae996f808be32aa8/: meta.yaml
mlruns/1/770cf62b63684adfae996f808be32aa8/artifacts/: README.txt
mlruns/1/770cf62b63684adfae996f808be32aa8/metrics/: foo
mlruns/1/770cf62b63684adfae996f808be32aa8/tags/: Author  Dir uploaded  Docker ID  Docker Image Name  Message  mlflow.runName
